--- a/css/styles.css
+++ b/css/styles.css
@@ -448,6 +448,10 @@ img {
   display: flex;
 }
 
+.card {
+  cursor: pointer;
+}
+
 .card-portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -494,6 +498,7 @@ img {
   margin-top: var(--card-portfolio-gap);
   margin-left: var(--card-portfolio-gap);
   flex-basis: calc(100% / 3 - 30px);
+  outline: 1px solid #eeeeee;
 }
 
 .items-descriptions {
@@ -502,9 +507,6 @@ img {
   padding-bottom: 20px;
   padding-left: 24px;
   background: #ffffff;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
 }
 
 /* ===============END PORTFOLIO==================== */
