--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,7 @@ img {
 
 .team-list {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .team-item:not(:last-child) {
@@ -359,6 +359,54 @@ img {
 }
 
 /* ===============END TEAM==================== */
+
+/* ===============OUR CLIENTS==================== */
+
+.clients-list {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+
+.clients-item {
+  margin-top: 30px;
+  margin-left: 30px;
+  flex-basis: calc(100% / 6 - 30px);
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  border-color: var(--accent-color);
+}
+
+.clients-section {
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+
+.clients-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.clients-link:hover .icon,
+.clients-link:focus .icon {
+  fill: var(--accent-color);
+}
+
+.icon {
+  fill: #afb1b8;
+}
 
 /* ===============FOOTER==================== */
 
