--- a/css/styles.css
+++ b/css/styles.css
@@ -337,7 +337,6 @@ img {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  margin-top: 30px;
   margin-bottom: 10px;
   line-height: 1.187;
   text-align: center;
@@ -352,10 +351,46 @@ img {
   font-weight: normal;
   font-size: 16px;
   margin-top: 0;
+  margin-bottom: 16px;
   line-height: 1.187;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--text-decoration-color);
+}
+
+.social-list-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.social-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: #2196f3;
+}
+
+.social-list-link:hover .social-list-icon {
+  fill: #ffffff;
+}
+
+.team-list-content-wrapper {
+  padding-top: 30px;
+  padding-left: 32px;
+  padding-right: 32px;
 }
 
 /* ===============END TEAM==================== */
