--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,12 @@ img {
   background-color: #2f303a;
   background-size: contain;
   background-repeat: no-repeat;
+  background-image: linear-gradient(
+  rgba(47, 48, 58, 0.4),
+  rgba(47, 48, 58, 0.4)
+  ), 
+  url("../imajes/hero/img.jpg");
+  background-size: cover;
 }
 
 .hero-title {
@@ -317,7 +323,6 @@ img {
 
 .team-item {
   padding-bottom: 30px;
-  cursor: pointer;
   flex-basis: calc(100% / 4 - 30px);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -372,6 +377,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
   width: 44px;
   height: 44px;
   background-color: #ffffff;
