--- a/css/styles.css
+++ b/css/styles.css
@@ -161,18 +161,22 @@ img {
 
 /* ============HERO=============== */
 
-.section-title {
-  text-align: center;
-  color: var(--main-color);
+.hero-content {
+  width: 696px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .hero {
-  width: 100%;
-  margin-top: 0;
-  margin-bottom: 0;
+  display: flex;
+  content: '';
+  max-width: 1600px;
+  height: 600px;
+  margin-right: auto;
+  margin-left: auto;
+  align-items: center;
   text-align: center;
   background-color: #2f303a;
-  background-size: contain;
   background-repeat: no-repeat;
   background-image: linear-gradient(
   rgba(47, 48, 58, 0.4),
@@ -207,13 +211,16 @@ img {
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.06em;
-  background-color: #ffffff;
+  color: #ffffff;
+  background-color:  #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
+  border-radius: 4px;
 }
+
 .modal-btn:hover,
 .modal-btn:focus {
-  color: #ffffff;
-  background-color: var(--accent-color);
+  
 }
 
 /* ============ END HERO=============== */
@@ -366,6 +373,7 @@ img {
 .social-list-icon {
   width: 20px;
   height: 20px;
+  fill:#afb1b8;
 }
 
 .social-list {
@@ -540,7 +548,17 @@ img {
 }
 
 .card {
-  cursor: pointer;
+width: 370px;
+height: 404px;
+background: #FFFFFF;
+border: 1px solid #EEEEEE;
+box-sizing: border-box;
+cursor: pointer;
+}
+
+.card:hover,
+.card:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .card-portfolio-list {
