--- a/css/styles.css
+++ b/css/styles.css
@@ -135,8 +135,8 @@ img {
 }
 
 .tel-link {
-  display: block;
-  min-width: 122px;
+  display: flex;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
   font-weight: 500;
@@ -149,6 +149,22 @@ img {
 .tel-link:hover,
 .tel-link:focus {
   color: var(--accent-color);
+}
+
+.tel-link:hover .auth-list-icon,
+.tel-link:focus .auth-list-icon {
+  fill: var(--accent-color);
+}
+
+.auth-list-icon {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: #757575;
+}
+
+.auth-list-item::before {
+  content: "";
 }
 
 .auth-navigation-list {
@@ -169,7 +185,7 @@ img {
 
 .hero {
   display: flex;
-  content: '';
+  content: "";
   max-width: 1600px;
   height: 600px;
   margin-right: auto;
@@ -179,10 +195,10 @@ img {
   background-color: #2f303a;
   background-repeat: no-repeat;
   background-image: linear-gradient(
-  rgba(47, 48, 58, 0.4),
-  rgba(47, 48, 58, 0.4)
-  ), 
-  url("../imajes/hero/img.jpg");
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../imajes/hero/img.jpg");
   background-size: cover;
 }
 
@@ -212,8 +228,8 @@ img {
   line-height: 1.875;
   letter-spacing: 0.06em;
   color: #ffffff;
-  background-color:  #2196f3;
-  
+  background-color: #2196f3;
+
   cursor: pointer;
   border-radius: 4px;
 }
@@ -256,7 +272,7 @@ img {
   height: 120px;
   margin-bottom: 30px;
   background-position: center;
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
   border-radius: 4px;
   background-repeat: no-repeat;
 }
@@ -303,7 +319,6 @@ img {
 .features-item:not(:last-child) {
   margin-right: 30px;
 }
-
 
 /* =============END FEATURES============ */
 
@@ -368,7 +383,6 @@ img {
   background: #ffffff;
 }
 
-
 .team-section {
   padding-bottom: 94px;
   padding-top: 94px;
@@ -405,7 +419,7 @@ img {
 .social-list-icon {
   width: 20px;
   height: 20px;
-  fill:#afb1b8;
+  fill: #afb1b8;
 }
 
 .social-list {
@@ -492,11 +506,11 @@ img {
 /* ===============FOOTER==================== */
 
 .footer {
- display: flex;
- height: 252px;
- padding-top: 60px;
- padding-bottom: 60px;
- background-color: #2f303a;
+  display: flex;
+  height: 252px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2f303a;
 }
 
 .container-footer {
@@ -583,17 +597,17 @@ img {
 }
 
 .footer-title {
-min-width: 145px;
-height: 16px;
-font-style: normal;
-font-weight: bold;
-font-size: 14px;
-line-height: 1.142;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-margin-bottom: 20px;
+  min-width: 145px;
+  height: 16px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.142;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
 
-color: #FFFFFF;
+  color: #ffffff;
 }
 
 .social-footer-link {
@@ -603,7 +617,7 @@ color: #FFFFFF;
   cursor: pointer;
   width: 44px;
   height: 44px;
-  background-color: rgba(255, 255, 255, 0.1);;
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
 }
 
@@ -615,7 +629,7 @@ color: #FFFFFF;
 .footer-list-icon {
   width: 20px;
   height: 20px;
-  fill:#FFFFFF;
+  fill: #ffffff;
 }
 
 /* ===============PORTFOLIO==================== */
@@ -625,17 +639,18 @@ color: #FFFFFF;
 }
 
 .card {
-width: 370px;
-height: 404px;
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-box-sizing: border-box;
-cursor: pointer;
+  width: 370px;
+  height: 404px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  cursor: pointer;
 }
 
 .card:hover,
 .card:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .card-portfolio-list {
@@ -714,7 +729,8 @@ cursor: pointer;
 .portfolio-btn:focus {
   color: #ffffff;
   background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* ===============END BUTTON=================== */
