--- a/css/styles.css
+++ b/css/styles.css
@@ -665,6 +665,10 @@ img {
 
 /* ===============PORTFOLIO==================== */
 
+.section-link {
+  display: block;
+}
+
 .portfolio-box .section-link:hover,
 .portfolio-box .section-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
