--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,19 @@ img {
 /* наведение курсором #2196F3 */
 /* бэкграунд #2F303A */
 
+.container {
+  width: 1200px;
+  padding: 0 15px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-between;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
 .logotipe-link {
   width: 145px;
   font-family: Raleway;
@@ -147,6 +160,7 @@ img {
   letter-spacing: 0.02em;
   color: var(--text-decoration-color);
 }
+
 .tel-link:hover,
 .tel-link:focus {
   color: var(--accent-color);
@@ -306,7 +320,7 @@ img {
 
 .features-title {
   min-width: 270px;
-  font-weight: bold;
+  font-weight: 700;
   margin-top: 0;
   margin-bottom: 10px;
   font-size: 14px;
@@ -437,19 +451,18 @@ img {
   cursor: pointer;
   width: 44px;
   height: 44px;
-  background-color: #ffffff;
+  background-color: var(--background-color);
   border-radius: 50%;
 }
 
 .social-list-link:hover,
 .social-list-link:focus {
   background-color: #2196f3;
-  outline: none;
 }
 
 .social-list-link:hover .social-list-icon,
 .social-list-link:focus .social-list-icon {
-  fill: #ffffff;
+  fill: var(--background-color);
   outline: none;
 }
 
@@ -478,8 +491,6 @@ img {
   margin-top: 30px;
   margin-left: 30px;
   flex-basis: calc(100% / 6 - 30px);
-  margin-top: 30px;
-  margin-left: 30px;
 }
 
 .clients-link:hover,
@@ -507,7 +518,6 @@ img {
 .clients-link:hover .icon,
 .clients-link:focus .icon {
   fill: var(--accent-color);
-  outline: none;
 }
 
 .icon {
@@ -577,6 +587,7 @@ img {
   letter-spacing: 0.02em;
   color: rgba(255, 255, 255, 0.6);
 }
+
 .footer-mailto-link:hover,
 .footer-mailto-link:focus {
   color: var(--accent-color);
@@ -592,6 +603,7 @@ img {
   letter-spacing: 0.02em;
   color: rgba(255, 255, 255, 0.6);
 }
+
 .footer-tel-link:hover,
 .footer-tel-link:focus {
   color: var(--accent-color);
@@ -640,7 +652,7 @@ img {
 .footer-list-icon {
   width: 20px;
   height: 20px;
-  fill: #ffffff;
+  fill: var(--background-color);
 }
 
 .social-list-item:not(:last-child) {
@@ -656,7 +668,6 @@ img {
 .portfolio-box .section-link:hover,
 .portfolio-box .section-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  outline: none;
 }
 
 .portfolio-box {
@@ -746,16 +757,3 @@ img {
 }
 
 /* ===============END BUTTON=================== */
-
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.container {
-  width: 1200px;
-  padding: 0 15px;
-  margin-left: auto;
-  margin-right: auto;
-  justify-content: space-between;
-}
